@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-15T01:45:02Z",
-  "count_outdated" : 802,
-  "uniques_outdated" : 412,
+  "timestamp" : "2024-09-16T00:49:17Z",
+  "count_outdated" : 803,
+  "uniques_outdated" : 413,
   "count" : 806,
   "uniques" : 416,
   "clones" : [
-    {
-      "timestamp": "2024-09-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-09-02T00:00:00Z",
       "count": 1,
