@@ -1,3 +1,12 @@
+2024-09-16T00:49:17Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10875757700 # 420
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-16
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 412 802 / 416 806
+* notice: next accum: outdated-unq outdated-all / unq all: 413 803 / 416 806
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-09-01] / []
+
 2024-09-15T01:45:02Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10867146310 # 419
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-15
